src/test/ui/issues/issue-57843.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57843.rs:25:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: `[closure@$DIR/issue-57843.rs:25:18: 25:24]` must implement `FnOnce<(&'1 bool,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 bool,)>`, for some specific lifetime `'2`

error: aborting due to previous error

